// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectorGroup should render with default styles 1`] = `
.circuit-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: auto;
}

.circuit-10 > div:not(:last-child) {
  margin-right: 16px;
}

.circuit-0 {
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 4px;
}

.circuit-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.circuit-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) + label::before {
  box-shadow: none;
}

.circuit-1:checked + label {
  background-color: #F0F6FF;
}

.circuit-1:checked + label::before {
  border: 2px solid #3063E9;
}

.circuit-2 {
  display: inline-block;
  cursor: pointer;
  background-color: #FFF;
  text-align: center;
  position: relative;
  border: none;
  border-radius: 8px;
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
  margin-bottom: 16px;
  padding: calc(12px) 24px;
  margin-bottom: 0;
  width: 100%;
}

.circuit-2::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  border: 1px solid #CCC;
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-2:hover {
  background-color: #F5F5F5;
}

.circuit-2:hover::before {
  border-color: #999;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:active::before {
  border-color: #666;
}

<fieldset
  class="circuit-10"
>
  <legend
    class="circuit-0"
  >
    Choose an option
  </legend>
  <div
    class="circuit-3"
  >
    <input
      class="circuit-1"
      id="selector_2"
      name="selector-group_1"
      type="radio"
      value="first"
    />
    <label
      class="circuit-2"
      for="selector_2"
    >
      Option 1
    </label>
  </div>
  <div
    class="circuit-3"
  >
    <input
      class="circuit-1"
      id="selector_3"
      name="selector-group_1"
      type="radio"
      value="second"
    />
    <label
      class="circuit-2"
      for="selector_3"
    >
      Option 2
    </label>
  </div>
  <div
    class="circuit-3"
  >
    <input
      class="circuit-1"
      id="selector_4"
      name="selector-group_1"
      type="radio"
      value="third"
    />
    <label
      class="circuit-2"
      for="selector_4"
    >
      Option 3
    </label>
  </div>
</fieldset>
`;

exports[`SelectorGroup should render with horizontal layout by default 1`] = `
.circuit-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: auto;
}

.circuit-10 > div:not(:last-child) {
  margin-right: 16px;
}

.circuit-0 {
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 4px;
}

.circuit-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.circuit-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) + label::before {
  box-shadow: none;
}

.circuit-1:checked + label {
  background-color: #F0F6FF;
}

.circuit-1:checked + label::before {
  border: 2px solid #3063E9;
}

.circuit-2 {
  display: inline-block;
  cursor: pointer;
  background-color: #FFF;
  text-align: center;
  position: relative;
  border: none;
  border-radius: 8px;
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
  margin-bottom: 16px;
  padding: calc(12px) 24px;
  margin-bottom: 0;
  width: 100%;
}

.circuit-2::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  border: 1px solid #CCC;
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-2:hover {
  background-color: #F5F5F5;
}

.circuit-2:hover::before {
  border-color: #999;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:active::before {
  border-color: #666;
}

<fieldset
  class="circuit-10"
>
  <legend
    class="circuit-0"
  >
    Choose an option
  </legend>
  <div
    class="circuit-3"
  >
    <input
      class="circuit-1"
      id="selector_18"
      name="selector-group_17"
      type="radio"
      value="first"
    />
    <label
      class="circuit-2"
      for="selector_18"
    >
      Option 1
    </label>
  </div>
  <div
    class="circuit-3"
  >
    <input
      class="circuit-1"
      id="selector_19"
      name="selector-group_17"
      type="radio"
      value="second"
    />
    <label
      class="circuit-2"
      for="selector_19"
    >
      Option 2
    </label>
  </div>
  <div
    class="circuit-3"
  >
    <input
      class="circuit-1"
      id="selector_20"
      name="selector-group_17"
      type="radio"
      value="third"
    />
    <label
      class="circuit-2"
      for="selector_20"
    >
      Option 3
    </label>
  </div>
</fieldset>
`;
